<resources>
    <string name="app_name">UAS_</string>
    <string name="pinjam_">PINJAM</string>
    <string name="gambar_11">gambar</string>
    <string name="namaaplikasi">Planet Library</string>
    <string name="nama_film1">Judul Buku</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="belum_punya_akun_daftar">Belum punya akun?</string>
    <string name="daftar">Daftar</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="enter_email">Enter email</string>
    <string name="btn_back">btn_back</string>
    <string name="full_name">Full name</string>
    <string name="daftar2">Daftar</string>
    <string name="rindu">Rindu</string>
    <string name="apalah_arti_memiliki_ketika_diri_kami_sendiri_bukanlah_milik_kami_apalah_arti_kehilangan_ketika_kami_sebenarnya_menemukan_banyak_saat_kehilangan_dan_sebaliknya_kehilangan_banyak_pula_saat_menemukan_apalah_arti_cinta_ketika_kami_menangis_terluka_atas_perasaan_yang_seharusnya_indah_bagaimana_mungkin_kami_terduduk_patah_hati_atas_sesuatu_yang_seharusnya_suci_dan_tidak_menuntut_apa_pun_wahai_bukankah_banyak_kerinduan_saat_kami_hendak_melupakan">Apalah arti memiliki? Ketika diri kami sendiri bukanlah milik kami. Apalah arti kehilangan, Ketika kami sebenarnya menemukan banyak saat kehilangan, dan sebaliknya, kehilangan banyak pula saat menemukan? Apalah arti cinta, Ketika kami menangis terluka atas perasaan yang seharusnya indah? Bagaimana mungkin, kami terduduk patah hati atas sesuatu yang seharusnya suci dan tidak menuntut apa pun? Wahai, bukankah banyak kerinduan saat kami hendak melupakan?</string>
    <string name="pinjam">Pinjam</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="password2">Password</string>
    <string name="enter_email2">Enter email</string>
    <string name="full_name2">Full name</string>
    <string name="password3">Password</string>
    <string name="email2">Email</string>
    <string name="full_name3">Full name</string>
    <string name="ensiklopedia_tanya_jawab">Ensiklopedia Tanya Jawab</string>
    <string name="daftar_buku_terkait">Daftar buku terkait</string>
    <string name="hasil_penelusuran_terkait">Hasil penelusuran terkait</string>
    <string name="ensiklopedia_fauna_dunia">Ensiklopedia Fauna Dunia</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="password4">Password</string>
    <string name="enter_email3">Enter email</string>
    <string name="belum_punya_akun_daftar2">Belum punya akun? </string>
    <string name="hallo_welcome">Hallo, welcome!</string>
    <string name="log_out">Log out</string>
    <string name="privacy">Privacy</string>
    <string name="kyungsoo_gmail_com">kyungsoo@gmail.com</string>
    <string name="kyungsoo">Kyungsoo</string>
    <string name="masukkan_nama_buku">Masukkan nama buku</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="title_home">Home</string>
    <string name="profil_">Profile</string>
    <string name="listbuku_">List Buku</string>
    <string name="search_">Search</string>
    <string name="search3">Search</string>
    <string name="detail">Detail</string>
    <string name="profil">Profil</string>
    <string name="daftar_buku">daftar Buku</string>
    <string name="or_continue_with">or continue with</string>
    <string name="masuk">Masuk</string>
    <string name="daftar12">Daftar</string>
    <string name="welcome">Welcome</string>
    <string name="masuk_2">Masuk</string>
    <string name="masuk_3">Masuk</string>
    <string name="logodaftar">Daftar</string>
    <string name="informasilogin">Silahkan isi informasi berikut</string>
    <string name="sudah_punya_akun">Sudah punya akun?</string>
    <string name="logodescription">logodescription</string>
    <string name="logo_description">logo\n</string>
    <string name="halamandaftar">Daftar</string>
    <string name="todo">TODO</string>
    <string name="description">The definitive, bestselling account of the company that changed the way we work and live, updated for the twentieth anniversary of Google’s founding with analysis of its most recent bold moves to redefine the world—and its even more ambitious plans for the future.</string>
    <string name="judul_buku_">Judul Buku</string>
    <string name="search1">Search</string>
    <string name="imagelogo">imagelogo</string>
    <string name="masukkan_nama_buku1">Masukkan Nama Buku</string>
    <string name="searchicon">searchicon</string>
    <string name="tanya">Ensiklopedia Tanya Jawab</string>
    <string name="author_">Steve Martin</string>
    <string name="back_button_description">back_button</string>
    <string name="result">Result</string>
    <string name="savebtn">Save</string>
    <string name="cancel_btn">Cancel</string>
    <string name="iconuser">iconuser_</string>
    <string name="namaprofil">Veronica</string>
    <string name="privacy_">Privacy</string>
    <string name="log_out_">Log out</string>
    <string name="emailprofile">veronica12@gmail.com</string>
    <string name="icnuser_">icnuser_</string>
    <string name="icnlogout">icnlogout</string>
    <string name="angkabuku">2</string>
    <string name="jmlhbuku_">Jumlah buku :</string>
    <string name="jumlah_buku_yg_dipinjam">Jumlah buku =</string>
    <string name="angkajlh">2</string>
    <string name="waktu_pinjam_buku">Waktu pinjam :</string>
    <string name="waktu_pinjam">20 desember 2024</string>
    <string name="tgl_kmbli">Waktu kembali:</string>
    <string name="konfirmasi">Silahkan Ambil</string>
    <string name="tglkembalibuku">-</string>
    <string name="jumlahbuku_">Jumlah :</string>
    <string name="angka">angka</string>
    <string name="hometoolbar">Home</string>
    <string name="logogambar_">logogambar</string>
    <string name="profiletoolbar">Profile</string>
    <string name="daftar_buku_pnjm">Daftar Buku</string>
    <string name="default_web_client_id">486771136375-0ha8mpidfbc878legjdaoio17sueo7hq.apps.googleusercontent.com</string>
    <string name="delete_01">Batalkan</string>
    <string name="yakin">Apakah Anda yakin ingin menghapus buku ini?</string>
    <string name="ya">YA</string>
    <string name="cancel_">Cancel</string>
</resources>