<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.pemrogandroid.uas_.ui.home.HomeFragment"
        android:label="@string/title_home"

        tools:layout="@layout/fragment_home"
        />

    <fragment
        android:id="@+id/listbukuFragment"
        android:name="com.pemrogandroid.uas_.ui.listbuku.ListBukuFragment"
        android:label="@string/listbuku_"
        tools:layout="@layout/fragment_list_buku" />
    <fragment
        android:id="@+id/searchFragment"
        android:name="com.pemrogandroid.uas_.ui.search.SearchFragment"
        android:label="@string/search_"
        tools:layout="@layout/fragment_search" />
    <fragment
        android:id="@+id/profilFragment"
        android:name="com.pemrogandroid.uas_.ui.profile.ProfileFragment"
        android:label="@string/profil_"
        tools:layout="@layout/fragment_profil" />
</navigation>