<?xml version="1.0" encoding="utf-8" ?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="28dp"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="418dp"
            android:layout_height="193dp"
            android:src="@drawable/biru_dan_kuning_ilustrasi_imut_modern_logo_bimbingan_belajar__1__removebg_preview2"
            android:contentDescription="@string/logodescription"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/masuk_2"
            android:textSize="34sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.362"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:cardCornerRadius="42dp"
        android:layout_marginBottom="-20dp"
        >

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#D7E3ED"
            android:orientation="vertical"
            android:padding="28dp">



            <View
            android:layout_width="wrap_content"
            android:layout_height="30dp"/>

            <EditText
                android:id="@+id/editTextTextEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/enter_email3"
                android:inputType="textEmailAddress"
                android:textColorHint="#607D8B"
                android:textSize="23sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.523"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha="0.7"
                android:background="#FBF4F4"></RelativeLayout>

            <EditText
                android:id="@+id/Password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:drawableEnd="@drawable/baseline_remove_red_eye_24"
                android:ems="55"
                android:hint="@string/password4"
                android:inputType="textPassword"
                android:textSize="23sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.516"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress"
                android:autofillHints="" />

       <RelativeLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content">

           <TextView
               android:id="@+id/forgotpassword"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:gravity="right"
               android:text="@string/forgot_password"
               android:textSize="18sp"
               tools:ignore="RtlHardcoded" />

       </RelativeLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="10dp"/>

            <Button
                android:id="@+id/masuk"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:backgroundTint="#6E8EB7"
                android:text="@string/masuk"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.516"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="40dp"/>

            <TextView
                android:id="@+id/orcontinue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingBottom="10dp"
                android:text="@string/or_continue_with"
                android:textColor="#616161" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

<!--                <ImageView-->
<!--                    android:id="@+id/imageView5"-->
<!--                    android:layout_width="29dp"-->
<!--                    android:layout_height="40dp"-->
<!--                    android:contentDescription="@string/todo"-->

<!--                    android:src="@drawable/pngegg__1_"-->
<!--                    app:layout_constraintEnd_toEndOf="parent"-->
<!--                    app:layout_constraintHorizontal_bias="0.457"-->
<!--                    app:layout_constraintStart_toStartOf="parent"-->
<!--                    app:layout_constraintTop_toTopOf="parent" />-->

            </LinearLayout>
            <View
                android:layout_width="wrap_content"
                android:layout_height="30dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

            <TextView
                android:id="@+id/tidakpunyaakun"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/belum_punya_akun_daftar2"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/buttonregis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/daftar12"
                android:textSize="20sp"
                android:textStyle="bold"/>
            </LinearLayout>
            <View
                android:layout_width="wrap_content"
                android:layout_height="30dp"/>
    </LinearLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>