<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D7E3ED"
    android:orientation="vertical"
    tools:context=".ui.profile.ProfileFragment">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:background="#D7E3ED">

    </RelativeLayout>

    <LinearLayout
        android:layout_width="360dp"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:layout_marginTop="45dp"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:background="@drawable/bluecolor"
            android:orientation="horizontal"
            android:paddingLeft="20dp">

            <de.hdodenhof.circleimageview.CircleImageView

                android:id="@+id/imageView6"
                android:layout_width="34dp"
                android:layout_height="32dp"
                android:layout_marginTop="16dp"

                android:layout_marginEnd="308dp"

                android:contentDescription="@string/iconuser"
                android:src="@drawable/user"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="218dp"
                android:layout_height="24dp"
                android:layout_gravity="center_vertical"

                android:layout_marginStart="5dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="23dp"
                android:layout_marginBottom="6dp"
                android:paddingLeft="20dp"
                android:text="@string/namaprofil"
                android:textColor="#FDFDFD"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/email_"
                app:layout_constraintEnd_toStartOf="@+id/imageView5"
                app:layout_constraintStart_toEndOf="@+id/imageView6"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/email_"
                android:layout_width="133dp"
                android:layout_height="15dp"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="30dp"
                android:paddingLeft="22dp"
                android:text="@string/emailprofile"
                android:textColor="#FDFDFD"
                android:textSize="10sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.178"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView3" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="45dp"
                android:layout_height="36dp"
                android:src="@drawable/editicn"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.945"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/bluecolor"
            android:orientation="horizontal"
            android:paddingLeft="20dp">

            <ImageView
                android:layout_width="33dp"
                android:layout_height="37dp"
                android:layout_marginTop="15dp"
                android:contentDescription="@string/icnuser_"
                android:src="@drawable/privacy_11" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingLeft="20dp"
                android:text="@string/privacy_"
                android:textColor="#FDFDFD"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/bluecolor"
            android:orientation="horizontal"
            android:paddingLeft="25dp">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="29dp"
                android:layout_marginTop="15dp"
                android:contentDescription="@string/icnlogout"
                android:src="@drawable/logout_icn111" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingLeft="20dp"
                android:text="@string/log_out_"
                android:textColor="#FDFDFD"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/textProfile"
        android:layout_width="356dp"
        android:layout_height="20dp"
        android:layout_gravity="center"
        android:textColor="#000"
        android:textSize="18sp" />
</LinearLayout>
